FIX gap not working mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,7 +75,6 @@ body {
       width: 100%;
 
       background-color: black;
-      border-radius: 10px;
       padding: 1rem;
 
       .header-gen {
